[package]
name = "webster-parser"
version = "0.1.0"
authors = ["johncf <johncf@protonmail.com>"]

[lib]
name = "nomster"
path = "src/lib.rs"

[[bin]]
name = "sample"
path = "src/bin/sample.rs"
required-features = ["binaries"]

[[bin]]
name = "patch-002"
path = "src/bin/patch-002.rs"
required-features = ["binaries"]

[[bin]]
name = "patch-003"
path = "src/bin/patch-003.rs"
required-features = ["binaries"]

[[bin]]
name = "check-links"
path = "src/bin/check-links.rs"
required-features = ["binaries"]

[[bin]]
name = "max-filepos"
path = "src/bin/max-filepos.rs"
required-features = ["binaries"]

[[bin]]
name = "unicode-list"
path = "src/bin/unicode-list.rs"
required-features = ["binaries"]

[features]
default = ["binaries"]
binaries = ["structopt"]

[dependencies]
nom = "4.0.0-beta1"
regex = "0.2"

structopt = { version = "0.2", optional = true }
