[package]
name = "webster-parser"
version = "0.1.0"
authors = ["johncf <johncf@protonmail.com>"]

[lib]
name = "nomster"
path = "src/lib.rs"

[[bin]]
name = "sample"
path = "src/bin/sample.rs"
required-features = ["binaries"]

[[bin]]
name = "patch-004"
path = "src/bin/patch-004.rs"
required-features = ["binaries"]

[[bin]]
name = "unicode-list"
path = "src/bin/unicode-list.rs"
required-features = ["binaries"]

[[bin]]
name = "dos2unix"
path = "src/bin/dos2unix.rs"
required-features = ["binaries", "encoding"]

[features]
default = ["binaries"]
binaries = ["structopt"]

[dependencies]
nom = "4.0.0-beta1"
regex = "0.2"

encoding = { version = "0.2", optional = true }
structopt = { version = "0.2", optional = true }
