[package]
name = "webster-parser"
version = "0.1.0"
authors = ["johncf <johncf@protonmail.com>"]

[lib]
name = "nomster"
path = "src/lib.rs"

[[bin]]
name = "sample"
path = "src/bin/sample.rs"
required-features = ["binaries"]

[[bin]]
name = "patch-004"
path = "src/bin/patch-004.rs"
required-features = ["binaries"]

[[bin]]
name = "patch-007"
path = "src/bin/patch-007.rs"
required-features = ["binaries"]

[[bin]]
name = "unicode-list"
path = "src/bin/unicode-list.rs"
required-features = ["binaries"]

[[bin]]
name = "dos2unix"
path = "src/bin/dos2unix.rs"
required-features = ["binaries", "encoding"]

[[bin]]
name = "g673-list"
path = "src/g673/list-words.rs"
required-features = ["g673"]

[[bin]]
name = "g673-unescape"
path = "src/g673/unescape.rs"
required-features = ["g673"]

[[bin]]
name = "g673-p004"
path = "src/g673/patch-004.rs"
required-features = ["g673"]

[features]
default = ["binaries"]
binaries = ["structopt"]
g673 = ["structopt", "lazy_static"]

[dependencies]
nom = "4.0.0-beta1"

encoding = { version = "0.2", optional = true }
lazy_static = { version = "1.0", optional = true }
structopt = { version = "0.2", optional = true }
